[project]
name = "algorithms-in-python"
version = "0.1.0"
description = "Playground for learning about algorithms and data structures"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.11",
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
]
